# jni_fmod

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/lxc/jni_fmod/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/lxc/jni_fmod/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/lxc/jni_fmod/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
